@@ -15,6 +15,7 @@ INCOMPLETE
 * `Object#extend($classes_or_objects)`                 - Accepts a list of classes or objects to mixin to the current class
 * `Object#extended()`                                  - Called after an object extends the current class
 * `Object#initialize($optional_args)`                  - Replaces `Object#__construct` (so that it works with `super`)
+* `Object#is_a($class_name)`                           - Checks if the current object or one of its parents is a `$class_name`
 * `Object#finalize()`                                  - Replaces `Object#__destruct` (so that it works with `super`)
 * `Object#respond_to($method_name)`                    - Checks if the current object has `$method_name` defined and returns a boolean
 * `Object#send($method_name, $array_of_optional_args)` - Calls `$method_name` in the current object with the arguments passed to it
