@@ -2,5 +2,4 @@
 * make global function "extend"
 * make Object#extended_* methods static so that extending classes only happens once instead of on instantiation
 * look into __callStatic for extending static methods
-* look into using ReflectionMethod#invoke (might be able to call protected/private methods that way)
 * Add real tests
